--- a/styles/Variables.scss
+++ b/styles/Variables.scss
@@ -8,6 +8,7 @@ $main-color: rgb(0, 190, 0);
 body {
     font-family: "Nunito", sans-serif;
     color: white;
+    box-sizing: border-box;
     font-weight: 600;
     background: #181818;
     svg,
