--- a/styles/Layout.scss
+++ b/styles/Layout.scss
@@ -14,7 +14,8 @@
     align-items: center;
     justify-content: space-around;
     height: 60px;
-    background-color: rgb(0, 190, 0);
+    background-color: #282828;
+    // border-bottom: 1px solid $main-color;
     a {
         text-decoration: none;
         color: white;
@@ -31,4 +32,60 @@
         text-decoration: none;
         color: white;
     }
+}
+
+@keyframes showMenu {
+}
+
+.LeftMenu {
+    position: absolute;
+    left: 0;
+    width: 250px;
+    background-color: #282828;
+    top: 0;
+    height: calc(100vh);
+    display: flex;
+    flex-direction: column;
+    div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 30px;
+        padding: 10px;
+        transition: 0.3s;
+        &:hover {
+            background-color: rgb(87, 87, 87);
+        }
+        a {
+            padding: 10px;
+            display: flex;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
+
+.alert-enter {
+    opacity: 0;
+    transform: translate(-60px, 0%);
+}
+.alert-enter-active {
+    opacity: 1;
+    transform: translateX(0);
+    transition: opacity 300ms, transform 300ms;
+}
+.alert-exit {
+    opacity: 1;
+}
+.alert-exit-active {
+    opacity: 0;
+    transform: translate(-60px, 0%);
+    transition: opacity 300ms, transform 300ms;
+}
+.LeftMenu__back {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    top: 0;
 }
