--- a/styles/Input.scss
+++ b/styles/Input.scss
@@ -10,6 +10,7 @@
     color: black;
     border-radius: 10px;
     transition: 0.3s;
+    box-shadow: 0 0 3px 1px $main-color;
     &:hover {
         border-radius: 5px;
     }
