--- a/styles/Layout.scss
+++ b/styles/Layout.scss
@@ -14,7 +14,7 @@
     width: 100%;
     position: fixed;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     height: 60px;
     background-color: #282828;
     // border-bottom: 1px solid $main-color;
@@ -57,6 +57,9 @@
             width: 100%;
             height: 100%;
         }
+    }
+    svg{
+        padding: 10px;
     }
 }
 
