--- a/styles/Musicadd.scss
+++ b/styles/Musicadd.scss
@@ -5,10 +5,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    min-width: 500px;
+    overflow: hidden;
     &__form {
-        background: rgb(87,87,87, 0.3);
-        
+        background: rgb(87, 87, 87, 0.3);
+
         height: 500px;
+        min-width: 800px;
+        overflow: hidden;
         width: 50%;
         display: flex;
         justify-content: center;
@@ -16,17 +20,87 @@
         border-radius: 5px;
         box-shadow: 0 0 5px 0px $main-color;
         border: solid 1px $main-color;
-        div{
-            filter: blur(4px);
-        }
         .Forms {
             width: 60%;
             filter: blur(0);
-            height: 40%;
+            height: 80%;
             display: flex;
             justify-content: space-between;
             align-items: center;
             flex-direction: column;
         }
     }
+}
+
+.FormsAlbum {
+    position: relative;
+    .ButtonAdd {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        right: 100px;
+        height: 60px;
+        width: 300px;
+        bottom: 0px;
+        button{
+            background-color: white;
+            color: $main-color;
+            opacity: 0.5;
+            &:hover{
+                background-color: $main-color;
+                color: white;
+                opacity: 1;
+            }
+        }
+    }
+    overflow: hidden;
+    width: 100%;
+    align-items: center;
+    height: 100%;
+    justify-content: space-between;
+    display: flex;
+    min-width: 500px;
+    overflow: hidden;
+    div {
+        height: 30px;
+    }
+    &__added {
+        padding-bottom: 119px;
+        margin-bottom: -119px;
+        min-width: 500px;
+        min-height: 100%;
+        background-color: rgb(87, 87, 87);
+        overflow-y: auto;
+        position: relative;
+        object-fit: cover;
+        background-size: cover !important;
+        background-repeat: no-repeat !important;
+        background-position: center !important;
+    }
+    &__unit {
+        margin: 0 auto;
+        margin-top: 8px;
+        width: 80%;
+        justify-content: space-between;
+        display: flex;
+        align-items: center;
+        background: rgb(61, 61, 61);
+        box-shadow: 0 0 5px 1px #181818;
+        border-radius: 10px;
+        padding: 10px;
+        transition: 0.3s;
+        &:hover {
+            background: rgb(87, 87, 87);
+        }
+        p {
+            cursor: pointer;
+        }
+    }
+}
+.FormAlbum__buttonAbs {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
 }
