--- a/styles/Variables.scss
+++ b/styles/Variables.scss
@@ -4,6 +4,8 @@
 @tailwind utilities;
 
 $main-color: rgb(0, 190, 0);
+$gray: #181818;
+$grayLight: #282828;
 
 body {
     font-family: "Nunito", sans-serif;
