--- a/styles/Audio.scss
+++ b/styles/Audio.scss
@@ -238,6 +238,10 @@
                 }
             }
         }
-
+        .Main__timer{
+            display: flex;
+            width: 100px;
+            justify-content: space-between;
+        }
     }
 }
