--- a/styles/Layout.scss
+++ b/styles/Layout.scss
@@ -4,10 +4,7 @@
     min-height: calc(100vh - 100px);
 }
 
-* {
-    margin: 0;
-    padding: 0;
-}
+
 
 .Layout {
     display: flex;
@@ -17,6 +14,7 @@
     justify-content: space-between;
     height: 60px;
     background-color: #282828;
+    z-index: 10;
     // border-bottom: 1px solid $main-color;
     a {
         text-decoration: none;
@@ -44,7 +42,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 30px;
+        height: 40px;
         padding: 10px;
         transition: 0.3s;
         &:hover {
@@ -59,7 +57,8 @@
         }
     }
     svg{
-        padding: 10px;
+        margin-top: 10px;
+        margin-left: 10px;
     }
 }
 
